[package]
name = "recolor"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sam Rose <hello@samwho.dev>"]
keywords = ["cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/samwho/recolor"
description = "Recolor any command output"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "**/*.rs",
]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
owo-colors = { version = "3", features = ["supports-colors"] }
log = "0.4"
env_logger = "0.10"
human-panic = "1.0"
regex = "1"
lazy_static = "1"
